change position of logo

--- a/intermediate_HTML_CSS/signup_form_project/styles.css
+++ b/intermediate_HTML_CSS/signup_form_project/styles.css
@@ -19,7 +19,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    align-self: center;
+    top: 20%;
     padding: 5%;
     box-sizing: border-box;
 }
