--- a/intermediate_HTML_CSS/signup_form_project/styles.css
+++ b/intermediate_HTML_CSS/signup_form_project/styles.css
@@ -50,4 +50,54 @@ body {
     padding: 7rem 5rem;
     font-weight: 700;
     background-color: beige;
+    height: 35vh;
+    box-sizing: border-box;
+}
+
+p {
+    margin: 16px 0px;
+}
+
+.signup {
+    position: relative;
+}
+
+.singup_section>p {
+    padding: 32px 0px 32px 0px;
+    margin: 0px;
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+label {
+    display: block;
+    width: 300px;
+    color:gray;
+}
+
+.singup_section {
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 0rem 5rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    width: 100%;
+    box-sizing: border-box;
+    height: 30vh;
+}
+
+.row_item {
+    display: inline-block;
+    width: 300px;
+    margin-right: 20rem;
+}
+
+.input_row {
+    display: block;
+    margin: 16px 0px 32px 0px;
+}
+
+input {
+    width: 300px;
+    height: 30px;
+    border-radius: 5px;
 }
