--- a/intermediate_HTML_CSS/admin_dashboard_project/styles.css
+++ b/intermediate_HTML_CSS/admin_dashboard_project/styles.css
@@ -3,3 +3,25 @@
     margin: 0px;
     box-sizing: border-box;
 }
+
+.page_container {
+    display: grid;
+    grid-template-columns: 1fr 3.5fr;
+    grid-template-rows: 1fr 4.5fr;
+    height: 100vh;
+}
+
+.dashboard {
+    grid-row: 1 / span 2;
+    grid-column: 1;
+}
+
+.head {
+    grid-row: 1;
+    grid-column: 2;
+}
+
+.main_nav {
+    grid-row: 2;
+    grid-column: 2;
+}
