--- a/intermediate_HTML_CSS/admin_dashboard_project/styles.css
+++ b/intermediate_HTML_CSS/admin_dashboard_project/styles.css
@@ -17,7 +17,7 @@
 .page_container {
     display: grid;
     grid-template-columns: 1fr 3.5fr;
-    grid-template-rows: 1fr 4.5fr;
+    grid-template-rows: 1fr 4fr;
     height: 100vh;
 }
 
@@ -84,5 +84,11 @@
 .main_nav {
     grid-row: 2;
     grid-column: 2;
+}
+
+.head {
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    grid-template-rows: 1fr 1.8fr;
 }
 
