--- a/intermediate_HTML_CSS/admin_dashboard_project/styles.css
+++ b/intermediate_HTML_CSS/admin_dashboard_project/styles.css
@@ -189,6 +189,7 @@
     grid-template-rows: 1fr 1fr;
     background-color: var(--secondary_theme);
     padding: 45px 25px;
+    gap: 20px;
 }
 
 .projects {
@@ -203,19 +204,28 @@
     height: calc(970px);
 }
 
-.projects h2 {
+.projects h2,
+.announcements h2 {
     font-size: 2rem;
     margin-bottom: 15px;
 }
 
-.projects h3 {
+.projects h3,
+.announcements h3 {
     font-size: 1.5rem;
     margin-bottom: 10px;
 }
 
-.project_desc {
+.project_desc,
+.announcements p {
     font-size: 1.3rem;
     color: gray;
+}
+
+.announcements {
+    display: flex;
+    flex-direction: column;
+    height: auto;
 }
 
 .project_card {
@@ -223,4 +233,19 @@
     border-radius: 10px;
     background-color: white;
     padding: 35px 25px;
+}
+
+.announcement_info {
+    background-color: white;
+    padding: 35px 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-radius: 10px;
+}
+
+.announcement_info p {
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid lightgray;
 }
