--- a/intermediate_HTML_CSS/admin_dashboard_project/styles.css
+++ b/intermediate_HTML_CSS/admin_dashboard_project/styles.css
@@ -124,7 +124,8 @@
     justify-content: space-around;
 }
 
-.profile img {
+.profile img,
+.trending_profiles img {
     height: 60px;
     width: 60px;
 }
@@ -248,4 +249,36 @@
     padding-bottom: 10px;
     margin-bottom: 10px;
     border-bottom: 1px solid lightgray;
+}
+
+.trending_profiles .profile_pic_background {
+    border-radius: 50%;
+    height: 65px;
+    width: 65px;
+}
+
+.trending_project>.num1 {
+    background-color: lightblue;
+}
+
+.trending_project>.num2 {
+    background-color: aqua;
+}
+
+.trending_project>.num3 {
+    background-color: cadetblue;
+}
+
+.trending_project>.num4 {
+    background-color: cornflowerblue;
+}
+
+.trending_profiles h3:first-child {
+    font-size: 2rem;
+}
+
+.trending_profiles h3:last-child {
+    font-size: 1.4rem;
+    font-weight: 300;
+    color: gray;
 }
