Add trending h2 to trending section

--- a/intermediate_HTML_CSS/admin_dashboard_project/styles.css
+++ b/intermediate_HTML_CSS/admin_dashboard_project/styles.css
@@ -206,7 +206,8 @@
 }
 
 .projects h2,
-.announcements h2 {
+.announcements h2,
+.trending_section>h2 {
     font-size: 2rem;
     margin-bottom: 15px;
 }
