--- a/javascript/organizing_javascript_code/2_PROJECT_library/styles.css
+++ b/javascript/organizing_javascript_code/2_PROJECT_library/styles.css
@@ -7,7 +7,7 @@
 .body_container {
     display: grid;
     height: 100vh;
-    grid-template-rows: 1fr 6fr 1fr;
+    grid-template-rows: 1fr 6fr 1.2fr;
 }
 
 .header {
@@ -21,4 +21,27 @@ h1 {
     font-size: 6rem;
     color: white;
     font-weight: 700;
+}
+
+.book_container {
+    background-color: #f2f2f2;
+}
+
+.bottom {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.add_book {
+    height: 125px;
+    width: 125px;
+    font-size: 10rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    background-color: #6bd66b;
+    border: 0px solid white;
+    border-radius: 30px;
 }
