--- a/javascript/organizing_javascript_code/2_PROJECT_library/styles.css
+++ b/javascript/organizing_javascript_code/2_PROJECT_library/styles.css
@@ -32,6 +32,40 @@ h1 {
     padding: 60px 120px;
 }
 
+.book_card {
+    background-color: #f9d4b4;
+    border-radius: 25px;
+    padding: 35px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 0.7fr repeat(4, 1fr);
+    gap: 15px;
+}
+
+.title {
+    grid-column: 1 / span 2;
+    display: flex;
+    justify-content: center;
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+.cover {
+    grid-row: 2 / span 3;
+    grid-column: 2;
+    background-color: #f2f2f2;
+}
+
+.book_card>button {
+    grid-column: 1/ span 2;
+    background-color: #ed4337;
+    border: none;
+    border-radius: 15px;
+    width: 50%;
+    height: 100%;
+    margin: auto;
+}
+
 .bottom {
     display: flex;
     align-items: center;
