--- a/javascript/async_and_APIs/2_weather_app_project/planning/display/styleTemplate.css
+++ b/javascript/async_and_APIs/2_weather_app_project/planning/display/styleTemplate.css
@@ -67,3 +67,12 @@
     align-items: center;
     justify-content: center;
 }
+
+.body {
+    height: 200vh;
+    background: rgb(0,119,182);
+    background: linear-gradient(rgba(0,119,182,1) 0%, rgba(0,180,216,1) 24%, rgba(0,212,255,1) 100%);    
+    background-size: auto 100vh;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
