--- a/javascript/async_and_APIs/2_weather_app_project/planning/display/styleTemplate.css
+++ b/javascript/async_and_APIs/2_weather_app_project/planning/display/styleTemplate.css
@@ -78,16 +78,20 @@
 }
 
 .body {
-    height: 200vh;
+    height: 100vh;
     background: rgb(0,119,182);
     background: linear-gradient(rgba(0,119,182,1) 0%, rgba(0,180,216,1) 24%, rgba(0,212,255,1) 100%);    
     background-size: auto 100vh;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    padding: 100px 20%;
 }
 
 .body {
-    padding: 100px 25%;
+    display: grid;
+    grid-template-columns: 3fr 1.4fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 50px;
 }
 
 .today {
@@ -97,6 +101,9 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 50px repeat( 5 , 50px);
+    grid-row: 1;
+    padding-top: 100px;
+
 }
 
 .temps_heading {
@@ -180,5 +187,87 @@
     font-size: 1.5rem;
     font-weight: 700;
     padding-top: 5px;
+}
+
+.now {
+    background-color: white;
+    grid-column: 1;
+    grid-row: 2;
+}
+
+.next24 {
+    background-color: white;
+    grid-row: 1 / span 2;
+}
+
+.now {
+    border-radius: 45px;
+    padding: 100px 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 3fr;
+}
+
+.now_condition {
+    height: 200px;
+    width: 200px;
+}
+
+.now>h2 {
+    grid-column: 1 / span 2;
+    font-size: 2rem;
+    font-weight: 700;
+    align-self: center;
+    justify-self: center;
+}
+
+.temp_feels_now {
+    font-size: 7rem;
+    font-weight: 700;
+    align-self: center;
+    justify-self: center;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.feelslike_now {
+    font-size: 2rem;
+    color: gray;
+}
+
+.condition_now {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.condition_now_desc {
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+.next24 {
+    border-radius: 45px;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-rows: repeat( 24 , 70px);
+    padding: 20px;
+}
+
+.hour {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.hour_icon {
+    height: 50px;
+    width: 50px;
+}
+
+.hour p {
+    font-size: 2rem;
+    font-weight: 700;
 }
 
