--- a/javascript/async_and_APIs/2_weather_app_project/styles.css
+++ b/javascript/async_and_APIs/2_weather_app_project/styles.css
@@ -205,7 +205,7 @@
     padding: 100px 50px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 3fr;
+    grid-template-rows: 1fr 1fr 3fr;
 }
 
 .now_condition {
@@ -219,6 +219,14 @@
     font-weight: 700;
     align-self: center;
     justify-self: center;
+}
+
+.date_time_now {
+    grid-row: 2;
+    grid-column: 1 / span 2;
+    font-weight: 700;
+    font-size: 2rem;
+    text-align: center;
 }
 
 .temp_feels_now {
