--- a/javascript/async_and_APIs/2_weather_app_project/styles.css
+++ b/javascript/async_and_APIs/2_weather_app_project/styles.css
@@ -261,21 +261,30 @@
     grid-template-rows: 1fr;
     grid-template-rows: repeat( 24 , 70px);
     padding: 20px;
+    overflow: auto;
+}
+
+.next24::-webkit-scrollbar {
+    display: none;
 }
 
 .hour {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(3 , 1fr);
     align-items: center;
 }
 
 .hour_icon {
     height: 50px;
     width: 50px;
+    align-self: center;
+    justify-self: center;
 }
 
 .hour p {
     font-size: 2rem;
     font-weight: 700;
+    text-align: center;
 }
 
